# NN_C

./: .aider.input.history  .dockerignore  .gitattributes  .gitignore  =0.19.0  =0.33.0  =2.0.0  =3.8.0  =4.0.0  =5.0.0  =5.8.0  =6.0.0  AGENTS.md  AGENT_CONVERSATION_STATUS_REPORT.md  AVX2  BASE_GOALS_NO_WRITE_ACCESS.md  CONSCIOUSNESS_INTEGRATION.md  ChatGPT_2026-02-11-12-42-35.txt  ChatGPT_2026-02-11-14-38-21_LATEST.txt  ChatGPT_2026-02-11-19-00-04_LATEST.txt  ChatGPT_2026-02-12-02-38-28_LATEST.txt  ChatGPT_2026-02-13-00-40-30_LATEST.txt  DEEP_SCAN_FINAL_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DIRECTORY_CONSOLIDATION_REPORT.md  Dockerfile  FINAL_SELF_HEALING_VALIDATION.json  FULL_SYSTEM_REPORT.json  GOAL_SYSTEM_FIXED_REPORT.md  HOT_RELOAD_PARAMETER_ANALYSIS.md  INTEGRATION_GUIDE.md  Invaders.c  Justfile  METAAGENT_ANALYSIS_REPORT.md  METAAGENT_STATUS_REPORT.md  MNIST.c  Makefile  Makefile_algorithmic  Makefile_complete  (+214 more)
.aider.tags.cache.v4/: cache.db
.clawhub/: lock.json
DIEP_GAME/: Makefile  (+8 more)
automation_framework/: Cargo.toml  DYNAMIC_MODEL_ROUTER.md  README.md  deploy.sh
automation_framework/python/: automation_bridge.py  webhook_server.py
automation_framework/src/: anthropic.rs  brittleness.rs  change_detection.rs  completeness.rs  constraints.rs  errors.rs  governance.rs  lib.rs  model_router.rs  production.rs  python_bindings.rs  resource.rs  subagent.rs  workflow.rs
automation_framework/tests/: actual_validation_tests.rs  edge_case_tests.rs  integration_tests.rs  performance_tests.rs  real_validation_tests.rs  security_fuzzing_tests.rs  validation_tests.rs
(+1313 files in other folders)
